# coinapi

./: .gitignore  Cargo.toml  exchanges.json
.github/workflows/: main.yml
src/: lib.rs
test_files/: xdb_history.json
