[package]
name = "coinapi"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
futures = "0.3"
url = "2.2.2"
serde_json = "1.0"
lazy_static = "1.4.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip", "brotli", "deflate", "multipart", "rustls-tls"]