[package]
name = "coinapi"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
futures = "0.3"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"
reqwest = "0.11"

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] }
